force-app/main/default/objects/Form_Response_Entry__c/Form_Response_Entry__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - This object is used to save multi response from users.</description>
    <label>Form Response Entry</label>
    <nameField>
        <displayFormat>FormRes-{0000}</displayFormat>
        <label>Form Response Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Response Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>