force-app/main/default/objects/Form_Response_Entry__c/fields/Additional_Emails__c.field-meta.xml
<CustomField>
    <fullName>Additional_Emails__c</fullName>
    <description>Additional email addresses which will receive a copy of online form response.</description>
    <label>Additional Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>