force-app/main/default/objects/Form_Response_Entry__c/fields/Company_Country__c.field-meta.xml
<CustomField>
    <fullName>Company_Country__c</fullName>
    <description>It shows the billing country from billing address</description>
    <formula>Contact_Edition_Mapping__r.Account__r.BillingCountry</formula>
    <label>Company Country</label>
    <type>Text</type>
</CustomField>