force-app/main/default/objects/Form_Response_Entry__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines Account Name through which form response is submitted</description>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Form Response Entries</relationshipLabel>
    <relationshipName>Form_Response_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>