force-app/main/default/objects/Form_Response_Entry__c/fields/Contact_Edition_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Contact_Edition_Mapping__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact Edition Mapping</label>
    <referenceTo>Contact_Edition_Mapping__c</referenceTo>
    <relationshipLabel>Form Response Entries</relationshipLabel>
    <relationshipName>Form_Response_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>