force-app/main/default/objects/Form_Response_Entry__c/fields/Content_Version__c.field-meta.xml
<CustomField>
    <fullName>Content_Version__c</fullName>
    <label>Content Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>