force-app/main/default/objects/Form_Response_Entry__c/fields/Current_Page__c.field-meta.xml
<CustomField>
    <fullName>Current_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to form page of Girikon forms</description>
    <label>Current Page</label>
    <referenceTo>Form_Page__c</referenceTo>
    <relationshipLabel>Form Response Entries</relationshipLabel>
    <relationshipName>Form_Response_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>