force-app/main/default/objects/Form_Response_Entry__c/fields/Current_Page_No__c.field-meta.xml
<CustomField>
    <fullName>Current_Page_No__c</fullName>
    <description>Current page no of Girikon forms.</description>
    <label>Current Page No</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>