force-app/main/default/objects/Form_Response_Entry__c/fields/Entry_Number__c.field-meta.xml
<CustomField>
    <fullName>Entry_Number__c</fullName>
    <description>Display the entry number of form response respect to an account</description>
    <label>Entry Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>