force-app/main/default/objects/Form_Response_Entry__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Edition</description>
    <label>Event Name</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Form Response Entries</relationshipLabel>
    <relationshipName>Form_Response_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>