force-app/main/default/objects/Form_Response_Entry__c/fields/Form_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Form_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Form response shown in related tab of form allocation.</description>
    <label>Form Allocation</label>
    <referenceTo>Form_Allocation__c</referenceTo>
    <relationshipLabel>Form Response Entries</relationshipLabel>
    <relationshipName>Form_Response_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>