force-app/main/default/objects/Form_Response_Entry__c/fields/Form_Data__c.field-meta.xml
<CustomField>
    <fullName>Form_Data__c</fullName>
    <label>Form Data</label>
    <referenceTo>Form_Data__c</referenceTo>
    <relationshipLabel>Form Response Entries</relationshipLabel>
    <relationshipName>Form_Response_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>