force-app/main/default/objects/Form_Response_Entry__c/fields/Form_Data_Status__c.field-meta.xml
<CustomField>
    <fullName>Form_Data_Status__c</fullName>
    <formula>IF(Form_Data__r.Is_Active__c  = true, &apos;Active&apos;, &apos;Inactive&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Data Status</label>
    <type>Text</type>
</CustomField>