force-app/main/default/objects/Form_Response_Entry__c/fields/Form_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Form_Deadline__c</fullName>
    <description>It will show the Submission Deadline of Form Allocation.</description>
    <formula>Form_Data__r.Forms_Permission__r.Form_Allocation__r.Submission_Deadline__c</formula>
    <label>Form Deadline</label>
    <type>Date</type>
</CustomField>