force-app/main/default/objects/Form_Response_Entry__c/fields/Form_Name2__c.field-meta.xml
<CustomField>
    <fullName>Form_Name2__c</fullName>
    <description>Form Allocation name for which response has been submitted.</description>
    <label>Form Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>