force-app/main/default/objects/Form_Response_Entry__c/fields/Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Name__c</fullName>
    <description>Display Form Display Name of Form Allocation</description>
    <formula>Form_Data__r.Forms_Permission__r.Form_Allocation__r.Name</formula>
    <label>Form Name</label>
    <type>Text</type>
</CustomField>