force-app/main/default/objects/Form_Response_Entry__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <description>It will show the Form type of Form Allocation.</description>
    <formula>TEXT(Form_Data__r.Forms_Permission__r.Form_Allocation__r.Form_Type__c)</formula>
    <label>Form Type</label>
    <type>Text</type>
</CustomField>