force-app/main/default/objects/Form_Response_Entry__c/fields/Form_Unlock__c.field-meta.xml
<CustomField>
    <fullName>Form_Unlock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this will be used to manage lock/unlock form by ops admin manually</description>
    <label>Form Unlock</label>
    <type>Checkbox</type>
</CustomField>