force-app/main/default/objects/Form_Response_Entry__c/fields/Girikon_Form__c.field-meta.xml
<CustomField>
    <fullName>Girikon_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of Girikon forms.</description>
    <label>Girikon Form</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>Form Response Entries</relationshipLabel>
    <relationshipName>Form_Response_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>