force-app/main/default/objects/Form_Response_Entry__c/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Last Modified By Community User</description>
    <inlineHelpText>Last Modified By Community User</inlineHelpText>
    <label>Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Form_Response_Entries1</relationshipName>
    <type>Lookup</type>
</CustomField>