force-app/main/default/objects/Form_Response_Entry__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <description>Last Modified Date by Community User</description>
    <inlineHelpText>Last Modified Date by Community User</inlineHelpText>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>