force-app/main/default/objects/Form_Response_Entry__c/fields/Ops_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Ops_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines Contact who submitted the form</description>
    <label>Ops Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Form Response Entries</relationshipLabel>
    <relationshipName>Form_Response_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>