force-app/main/default/objects/Form_Response_Entry__c/fields/Purchase_Data__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Data__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase Data</label>
    <referenceTo>Purchase_Data__c</referenceTo>
    <relationshipLabel>Form Response Entries</relationshipLabel>
    <relationshipName>Form_Response_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>