force-app/main/default/objects/Form_Response_Entry__c/fields/Receive_an_Email_Copy__c.field-meta.xml
<CustomField>
    <fullName>Receive_an_Email_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked then customer will receive a copy of online form response.</description>
    <label>Receive an Email Copy</label>
    <type>Checkbox</type>
</CustomField>