force-app/main/default/objects/Form_Response_Entry__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>For entering the rejection reason for rejecting any submitted form</description>
    <label>Rejection Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>