force-app/main/default/objects/Form_Response_Entry__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>Define last submission date when form is submitted</description>
    <inlineHelpText>Last Submission Date</inlineHelpText>
    <label>Submission Date</label>
    <type>Date</type>
</CustomField>