force-app/main/default/objects/Form_Response_Entry__c/fields/Total_Pages__c.field-meta.xml
<CustomField>
    <fullName>Total_Pages__c</fullName>
    <description>Number of Pages in Girikon forms.</description>
    <label>Total Pages</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>