force-app/main/default/objects/Form_Response_Entry__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of User who is submitting the response.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Form_Response_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>