force-app/main/default/objects/Form_Response_Entry__c/fields/User_Type1__c.field-meta.xml
<CustomField>
    <fullName>User_Type1__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_Type1</valueSetName>
    </valueSet>
</CustomField>