force-app/main/default/objects/Form_Response_Entry__c/fields/View_Response__c.field-meta.xml
<CustomField>
    <fullName>View_Response__c</fullName>
    <formula>if(OR(ISBLANK(Content_Version__c),ISNULL(Content_Version__c)),&quot;&quot;,if((ISPICKVAL(Form_Data__r.Forms_Permission__r.Form_Allocation__r.Feature_Category__c,&apos;Form&apos;)),IF((ISPICKVAL(Form_Data__r.Forms_Permission__r.Form_Allocation__r.Form_Type__c,&apos;Pdf&apos;)), (HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot;&amp;Content_Version__c, &quot;View&quot; ,&quot;_blank&quot;)),IF((ISPICKVAL(Form_Data__r.Forms_Permission__r.Form_Allocation__r.Form_Type__c,&apos;Online&apos;)),(HYPERLINK(&quot;/apex/GirikonForm?id=&quot;+Form_Data__r.Forms_Permission__r.Form_Allocation__r.Form__c+&quot;&amp;ceid=&quot;+Contact_Edition_Mapping__c+&quot;&amp;check=0&amp;ref=new&amp;accId=&quot;+Company_Name__c+&quot;&amp;edcode=&quot;+Event_Name__r.Edition_Code__c+&quot;&amp;formDataId=&quot;+Form_Data__c+&quot;&amp;entryId=&quot;+Id, &quot;View&quot; ,&quot;_blank&quot;)),&quot;&quot;)),&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Response</label>
    <type>Text</type>
</CustomField>