force-app/main/default/objects/Form_Response_Entry__c/validationRules/Rejection_Reason_Req_for_Rejected_Forms.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason_Req_for_Rejected_Forms</fullName>
    <active>true</active>
    <description>When any form is rejected, then rejection reason become mandatory as it helps the user to know the reason.</description>
    <errorConditionFormula>AND(ISPICKVAL( Approval_Status__c , &apos;Rejected&apos;) ,  ISBLANK( Rejection_Reason__c ) )</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Please enter the rejection reason for rejecting the form.</errorMessage>
</ValidationRule>