force-app/main/default/objects/Form_Response_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Ops_Contact_Name__c</columns>
    <columns>Form_Name__c</columns>
    <columns>Form_Type__c</columns>
    <columns>Form_Deadline__c</columns>
    <columns>Response_Status__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>View_Response__c</columns>
    <columns>Submission_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Response_Status__c</field>
        <operation>notEqual</operation>
        <value>Approved</value>
    </filters>
    <label>All</label>
</ListView>