force-app/main/default/objects/Form_Response_Entry__c/listViews/CPHI_2022_On_stand_Form_Responses.listView-meta.xml
<ListView>
    <fullName>CPHI_2022_On_stand_Form_Responses</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Ops_Contact_Name__c</columns>
    <columns>Form_Name__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>View_Response__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>User_Type1__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Form_Data_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Event_Name__c</field>
        <operation>equals</operation>
        <value>CPHI Frankfurt 2022</value>
    </filters>
    <filters>
        <field>Company_Name__c</field>
        <operation>notContain</operation>
        <value>test</value>
    </filters>
    <filters>
        <field>Form_Name__c</field>
        <operation>contains</operation>
        <value>On Stand Activities</value>
    </filters>
    <filters>
        <field>Response_Status__c</field>
        <operation>equals</operation>
        <value>Resubmitted,In Review,Approved,Rejected</value>
    </filters>
    <label>CPHI 2022 - On-stand Form Responses</label>
</ListView>